Rename plugin to Tabdir Redux, add tab title regex replacements, add proper readme